# NeoFontRender

./: .gitignore  CHANGELOG.md  CODEOWNERS  LICENSE  PLAN.md  README.md  README.zh-CN.md  addon.gradle  build.gradle  build.gradle.kts  dependencies.gradle  gradle.properties  settings.gradle.kts
.github/workflows/: deploy.yml
addons/ui-enhancements/: NOTICE.md  README.md  build.gradle
addons/ui-enhancements/src/main/resources/: mcmod.info  mixins.neofontrender_ui_enhancements.json  mixins.neofontrender_ui_enhancements_hei.json  mixins.neofontrender_ui_enhancements_obscure_tooltips.json
docs/: blend-architecture.md  rust-text-and-sign-batching-plan.md
gradle/scripts/: dependencies.gradle  extra.gradle
native/cosmic-text/: Cargo.toml
native/cosmic-text/examples/: ligature_probe.rs
native/cosmic-text/src/: lib.rs
src/main/java/neofontrender/: NeoFontRender.java  Tags.java
src/main/java/neofontrender/api/: NeoFontRenderApi.java
src/main/java/neofontrender/client/: ClientProxy.java  NeofontrenderCommand.java  NeofontrenderKeyHandler.java  NeofontrenderMainMenuBranding.java  NeofontrenderOptionsButtonHandler.java
src/main/java/neofontrender/common/: CommonProxy.java
src/main/java/neofontrender/mixin/: MixinFontRenderer.java  MixinForgeGuiUtils.java  MixinGuiEditSign.java  MixinGuiOverlayDebug.java  MixinGuiScreen.java  MixinGuiTextField.java  MixinMinecraft.java  MixinModularRichTooltip.java  MixinModularTextField.java  MixinModularTextRenderer.java  (+5 more)
src/main/resources/: mcmod.info  mixins.neofontrender.json  neofontrender_at.cfg
(+224 files in other folders)
